kubernetes/bitwarden/components/openshift/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bitwarden
  namespace: bitwarden
  annotations:
    externaldns.k8s.io: unifi
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: https-gateway
      namespace: openshift-ingress

    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: listeners
      namespace: openshift-ingress
  hostnames: ["bitwarden.arthurvardevanyan.com"]
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: bitwarden
          namespace: bitwarden
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
