kubernetes/bitwarden/components/openshift/ingress.yaml
#######################################################################
### This is only here for BlackBox to AutoDetect the URL to Monitor ###
#######################################################################
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: bitwarden
  namespace: bitwarden
  labels:
    app.kubernetes.io/instance: bitwarden
  # annotations:
  #   externaldns.k8s.io: pihole
spec:
  ingressClassName: openshift-default
  tls:
    - hosts:
        - bitwarden.arthurvardevanyan.com
      secretName: bitwarden-cert
  rules:
    - host: bitwarden.arthurvardevanyan.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bitwarden
                port:
                  number: 80
