kubernetes/bitwarden/components/openshift/egress-firewall.yaml
apiVersion: k8s.ovn.org/v1
kind: EgressFirewall
metadata:
  name: default
  namespace: bitwarden
spec:
  egress:
    - type: Deny
      to:
        cidrSelector: 0.0.0.0/0
